--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <div class="img-container">
+            <img src="assets/images/pexels-bill-emrich-230794-0.jpg" alt="immagine con vista notturna di una ruota panramica a Londra">
+            <img src="assets/images/pexels-bill-emrich-230794-1.jpg" alt="immagine con vista notturna  del London bridge">
+            <img src="assets/images/pexels-bill-emrich-230794-2.jpg" alt="immagine con vista notturna sul Big Ben a Londra">
+        </div>
+        <hr>
+    </header>
 </body>
 </html>
