main and first section of main created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- header starts -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
         <div class="img-container">
@@ -16,5 +18,51 @@
         </div>
         <hr>
     </header>
+    <!-- /header ends -->
+
+    <!-- main starts -->
+    <main>
+        <!-- first section -->
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&#8364;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&#8364;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&#8364;</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360&#8364;</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+        </section>
+        <!-- /first section  -->
+
+    </main>
+    <!-- /main ends -->
 </body>
 </html>
