--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
             <hr>
         </section>
         <!-- /first section  -->
+        <!-- second section  -->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la tower of London&#10008;</li>
+                <li>Visitare greenwich&#10004;</li>
+                <li>Ascoltare un artista di strada a Covent Garden&#10004;</li>
+                <li>Mangiare il tipico Fish and Chips inglese&#10008;</li>
+            </ul>
+            <hr>
+        </section>
+        <!-- /second section  -->
 
     </main>
     <!-- /main ends -->
