little gif added for fun

--- a/index.html
+++ b/index.html
@@ -114,5 +114,15 @@
         <!-- /last section  -->
     </main>
     <!-- /main ends -->
+
+    <!-- footer starts  -->
+    <footer>
+        <div class="tenor-gif-embed" data-postid="25847566" data-share-method="host" data-aspect-ratio="1" data-width="10%"><a href="https://tenor.com/view/goodbye-bye-bye-cat-bye-bye-gif-25847566">Goodbye Bye Bye GIF</a>from <a href="https://tenor.com/search/goodbye-gifs">Goodbye GIFs</a></div> 
+    </footer>
+    <!-- footer ends  -->
+
+    <!-- gif script  -->
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    <!-- gif script  -->
 </body>
 </html>
