correction (closing div at line 113 added)

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class="foto-container">
                 <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="immagine di un ponte a Londra">
                 <img src="https://www.ocorian.com/sites/default/files/styles/large/public/2020-01/LONDON%20FINAL%20.jpg?itok=8pZeriSC" alt="immagine del big ben a Londra">
+            </div>
         </section>
         <!-- /last section  -->
     </main>
